<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="@dimen/padding_24dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_workout_plan"
        android:textColor="@color/black"
        android:textSize="@dimen/create_workout_plan_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/create_workout_plan_margin"
        android:padding="@dimen/create_workout_plan_padding" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_plan_name"
        android:textColor="@color/black"
        android:textSize="@dimen/workout_plan_name_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/workout_plan_name_margin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPlanName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_g_full_body_workout"
        android:background="@drawable/title_background"
        android:padding="@dimen/full_body_workout_padding"
        android:layout_marginBottom="@dimen/full_body_workout_margin" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/select_exercises"
        android:textSize="@dimen/select_exercises_text_size"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/select_exercises_margin" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/exerciseListContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/top_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreatePlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save_workout"
            android:textColor="@color/black"
            android:paddingLeft="@dimen/Save_workout_padding"
            android:paddingRight="@dimen/Save_workout_padding"
            android:paddingTop="@dimen/Save_workout_padding_top"
            android:paddingBottom="@dimen/Save_workout_padding_bottom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginTop="@dimen/l_top_margin">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconHome"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconSearch"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconAdd"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/add"
            android:contentDescription="@string/add"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconFavorites"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/favorites"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconProfile"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile"
            android:padding="@dimen/icons_padding" />
    </LinearLayout>

</LinearLayout>

