<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_24dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="@dimen/textSize_28"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/searchEditText_height"
            android:hint="@string/search_exercises"
            android:paddingStart="@dimen/searchEditText_paddingStart"
            android:paddingEnd="@dimen/searchEditText_paddingEnd"
            android:textColorHint="@color/gray"
            android:gravity="center_vertical"
            android:background="@drawable/title_background"
            android:layout_centerVertical="true" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/layout_width_24"
            android:layout_height="@dimen/layout_height_24"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:src="@drawable/search"
            android:contentDescription="@string/search_icon" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/exerciseRecyclerView_paddingTop"
        android:clipToPadding="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:layout_marginTop="@dimen/l_top_margin">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconHome"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconSearch"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconAdd"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/add"
            android:contentDescription="@string/add"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconFavorites"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/favorites"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconProfile"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile"
            android:padding="@dimen/icons_padding" />
    </LinearLayout>

</LinearLayout>