<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/darker_gray"
        android:background="@color/light_blue"
        app:tabMode="fixed"
        app:tabGravity="fill"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="@dimen/l_top_margin"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconHome"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconAdd"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/add"
            android:contentDescription="@string/add"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconFavorites"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/favorites"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconProfile"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile"
            android:padding="@dimen/icons_padding" />
    </LinearLayout>
</LinearLayout>

