<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExercises"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:padding="@dimen/recyclerViewExercises_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="@dimen/l_top_margin"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconHome"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/home"
            android:contentDescription="@string/home"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconSearch"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconAdd"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/add"
            android:contentDescription="@string/add"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconFavorites"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/heart"
            android:contentDescription="@string/favorites"
            android:padding="@dimen/icons_padding" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconProfile"
            android:layout_width="0dp"
            android:layout_height="@dimen/icons_height"
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:contentDescription="@string/profile"
            android:padding="@dimen/icons_padding" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
